BPM-131: No background color is found if drag the horizontal scrollbar to the right side Fixed for Browser: Chrome, IE8 + Chrome-Frame

--- a/src/main/webapp/css/theme_norm.css
+++ b/src/main/webapp/css/theme_norm.css
@@ -129,7 +129,7 @@ table-layout:fixed;
     border-bottom:1px solid #ccc;
     padding-top:3px;
     padding-bottom:0px;
-    min-width:195px;
+    min-width:220px;
 	font-size:12px;
 	font-weight:bold;
 	font-family:Verdana, Geneva, Arial, Helvetica, sans-serif;
@@ -180,7 +180,7 @@ table-layout:fixed;
 .ShapeRepEntree{
 	margin:1px;
 	padding:5px 0px;
-	min-width:193px;
+	min-width:218px;
 	border:1px solid #f1f1f1;
 	background-color:#f6f6f6;
 }
